testsuite/tests/properties/invalid_unique/not_hashable.lkt
import common

class Example: FooNode implements TokenNode {
    @export fun test(): Bool = node.token_start.singleton.unique
}
